--- a/compile/Dockerfile
+++ b/compile/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /go/src/app
 
 RUN apk add --no-cache git
 
-ENTRYPOINT go-wrapper download && go-wrapper install && go build -o controller main.go
+ENTRYPOINT go-wrapper download && go-wrapper install && go build -o bin/controller main.go
