--- a/k8s/beanstalkd.yml
+++ b/k8s/beanstalkd.yml
@@ -1,3 +1,15 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: beanstalkd
+  labels:
+    app: beanstalkd
+spec:
+  ports:
+    - port: 11300
+  selector:
+    app: beanstalkd
+---
 apiVersion: extensions/v1beta1
 kind: ReplicaSet
 metadata:
